--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,8 @@
 <h2>Edit Book</h2>
-<%= render 'form' %>
+    <%= simple_form_for @book, :html => { :multipart => true } do |f| %>
+      <%= f.select :category_id, @categories %>
+      <%= f.input :title, label: "Book Title" %>
+      <%= f.input :description %>
+      <%= f.input :author %>
+      <%= f.button :submit %>
+<% end %>
