--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <h2>Edit Book</h2>
     <%= simple_form_for @book, :html => { :multipart => true } do |f| %>
       <%= f.select :category_id, @categories %>
+      <%= f.file_field :book_img %>
       <%= f.input :title, label: "Book Title" %>
       <%= f.input :description %>
       <%= f.input :author %>
