--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,17 @@
 
 <% else %>
 
+    <div class="row">
+    
     <% @books.each do |book| %>
-        <h2><%= link_to book.title, book_path(book)%></h2>
+    
+        <div class="col-md-3">
+             <a href="/books/<%= book.id %>">
+                 <%= image_tag book.book_img.url(:book_index) %>
+             </a>
+        </div>     
+        
     <% end %>
+    
+   </div> 
 <% end %>
