--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,14 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.book {
+    height: 350px;
+    width: 250px;
+    padding: 25px;
+    box-shadow: 10px 10px 5px #888888;
+}
+.book-show {
+    height: 475px;
+    width: 325px;
+}
