--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,15 +8,15 @@
 
     <div class="row">
     
-    <% @books.each do |book| %>
-    
-        <div class="col-md-3">
-             <a href="/books/<%= book.id %>">
-                 <%= image_tag book.book_img.url(:book_index) %>
-             </a>
-        </div>     
+        <% @books.each do |book| %>
         
-    <% end %>
+            <div class="col-md-3">
+                 <a href="/books/<%= book.id %>">
+                     <%= image_tag book.book_img.url(:book_index), class: "book" %>
+                 </a>
+            </div>     
+            
+        <% end %>
     
    </div> 
 <% end %>
