--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,12 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
 
+  <div class="container">
+    
 <%= yield %>
 
+  </div>
+  
 </body>
 </html>
   
