--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,6 +5,9 @@
     <div class="col-md-8">
         <h2><%= @book.title %></h2>
         <h3><%= @book.author %></h3>
+        <h2>Average Rating</h2>
+        <div class="average-review-rating" data-score=<%= @average_review %>></div>
+        <span>Based on <%= @book.reviews.count %> reviews </span>
         <p><%= @book.description %></p>
     </div>
 
@@ -41,7 +44,18 @@
         readOnly: true,
         score: function() {
             return $(this).attr('data-score');
-        };
+        },
         path: '/assets/'
     });    
+</script>
+
+<script>
+    $('.average-review-rating').raty({
+       readOnly: true,
+       path: '/assets/',
+       score: function(){
+           return $(this).attr('data-score')
+       }
+    });
+    
 </script>
