--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,6 @@
-<h1>New Book</h1>
-<%= render 'form' %>
+<div class="col-md-6 col-md-offset-3">
+    <div class="new-book-form">
+        <h1>New Book</h1>
+        <%= render 'form' %>
+    </div>
+</div>
