--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="col-md-6 col-md-offset-3">
+    <div class="edit-review-form">
+
 <h1>Edit Review</h1>
 
 <%= simple_form_for([@book, @review]) do |f| %>
@@ -5,8 +8,11 @@
         <label>Rating</label>
     </div>
     <%= f.input :comment %>
-    <%= f.button :submit %>
+    <%= f.button :submit, :class => 'btn-custom2' %>
 <% end %>
+
+</div>
+</div>
 
 <script>
     $('#rating-form').raty({
